--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,8 @@
             "outputPath": "dist/angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "deployUrl": "./",
+            "baseHref": "./",
             "polyfills": [
               "zone.js"
             ],
@@ -93,7 +95,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
