--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -14,6 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Cache node modules
+      id: cache
+      uses: actions/cache@v3
+      with:
+        path: node_modules
+        key: node_modules_cache
+
     - name: Checkout repository
       uses: actions/checkout@v3
 
