--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -16,7 +16,9 @@ jobs:
       uses: actions/cache@v3
       with:
         path: node_modules
-        key: node_modules_cache
+        key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-modules-
 
     - name: Checkout repository
       uses: actions/checkout@v3
