--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm install
 
     - name: Build project
-      if: success()  # Only run build if tests pass
+      # if: success()  # Only run build if tests pass
       run: npm run build
 
     - name: Deploy (if necessary)
