Added -f to force deploy to dist folder step

--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -45,8 +45,8 @@ jobs:
         cp -r dist/* .
 
         # Add, commit, and push the updated `dist` folder
-        git add dist
+        git add -f dist
         git commit -m "Update dist folder from GitHub Actions"
-        git push -f origin main
+        git push origin main
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
